<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/text_about_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="12dp"
        android:textSize="14sp"
        android:text="@string/text_about_1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_about_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/text_about_2"
        app:layout_constraintEnd_toEndOf="@+id/text_about_1"
        app:layout_constraintStart_toStartOf="@+id/text_about_1"
        app:layout_constraintTop_toBottomOf="@+id/text_about_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_code"
        android:layout_width="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/primaryColor"
        app:rippleColor="@color/primaryDarkColor"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/code"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>