<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primaryLightColor"
    tools:context=".activities.MainActivity">

    <Switch
        android:id="@+id/switch_enable_bt"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/bluetooth_on_off"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:id="@+id/frame_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bluetooth_off"
            android:textSize="24sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_enable_search"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="216dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/secondaryColor"
                android:paddingHorizontal="25dp"
                android:text="@string/start_search"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:rippleColor="@color/secondaryDarkColor" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pb_progress"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>